# Demon-Core--

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CriticalitySimulator.kt  Demon-Core-🔱.apk  EventListenerWorker.kt  Folder Structure  KarmaFragment.kt  KarmaOracle.sol  LICENSE  MainActivity.kt  NameKarmaStepFragment.kt  README-SECURITY.md  README.md  ReincarnationViewerFragment.kt  SECURITY-AUDIT-PLAN.md  SoulBlockchainManager.kt  SoulEvents.sol  SoulMetadataFetcher.kt  SoulTokenAdapter.kt  activity_main.xml  android { ... }  fragment_reincarnation_viewer.xml  generate_demon_core_full.py  hardhat.config.js (root)  item_soul_token.xml
app/: build.gradle.kts  proguard-rules-criticality.pro
app/src/main/: AndroidManifest.xml
backend/: .env.example  Cargo.toml  env.example (root)  package.json
backend-proxy/: mint.js
backend/backend/: server.js
backend/src/: main.rs
contracts/: AuraContract.sol  AuraResonanceOracle.sol  CriticalityOracle.sol  DemonCoreDAOProposals.sol  FrequencyResonanceNFT.sol  KarmaDecayOracle.sol  KarmaOracleProxy.sol  MultiverseLinker.sol  ReincarnationRegistry.sol  SIWEVerifier.sol  SoulBindingEscrow.sol  SoulContract.sol  SoulDecayContract.sol  SoulGovernance.sol  ZKProofVerifier.sol  package.json
docs/: crypto-key-derivation.txt  shamir-share-notes.txt
res/drawable/: badge_token_id.xml  gradient_soul_energy.xml
res/layout/: fragment_settings.xml  fragment_step_aura_scan.xml  fragment_step_confirm_mint.xml  fragment_step_name_karma.xml  fragment_step_wallet_sign.xml
rust/src/: lib.rs  shamir.rs
scripts/: deploy.js
(+31 files in other folders)
