[package]
name = "demon-core-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["abigen"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"
anyhow = "1"
